# hotel-booking-v2

./: .env.example  .gitignore  BOOKING_AGENT_CHANGES.txt  Dockerfile.backend  Dockerfile.frontend  architecture.drawio  architecture.mmd  build_spec_file.yaml  buildspec.yml  create_tables.py  docker-compose.yml  hotel_booking.db  main.py  pyproject.toml  pytest.ini  readme.txt  requirements-docker.txt  requirements.txt  test_mlflow.py  test_postgres.py  testdb.py
.github/workflows/: ci.yml
backend/: api2.py  config.py
backend/agents/: availability_agent.py  booking_agent.py  invoice_agent.py  orchestrator_agent.py  search_agent.py  search_availability_agent.py
backend/api/: auth.py  main.py
backend/db/: auth_models.py  checkdb.py  database.py  models.py  seed.py
backend/evaluation/: evaluator.py
backend/graph/: graph.py  routers.py  state.py
backend/guardrails/: input_guardrail.py  input_guardrails.py  output_guardrail.py
backend/observability/: tracing.py
backend/services/: booking_service.py  hotel_service.py  payment_service.py  price_service.py
backend/tools/: availability_tools.py  booking_tools.py  check_payment_status.py  extract_invoice_data.py  lookup_company_contact.py  payment_tools.py  (+2 more)
deploy/: deploy.sh  ecs-task-backend.json  ecs-task-frontend.json
frontend/: streamlit_app.py
scripts/: install-hooks.sh
tests/: conftest.py  test_api_main.py  test_booking_agent.py  test_graph_routing.py  test_input_guardrail.py  test_invoice_agent.py  test_invoice_routing.py  test_orchestrator_agent.py  test_output_guardrail.py  test_tools.py
(+44 files in other folders)
